--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Mohmed Mahmoud Fouad" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./assest/Mohmed.jpg"/>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://mohmed.vercel.app/static/media/Mohmed.ba65cb21.jpg"
+    />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       rel="stylesheet"
