--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       sizes="32x32"
       href="https://mohmed.vercel.app/static/media/Mohmed.ba65cb21.jpg"
     />
+    <meta name="google-site-verification" content="CJS4-pP2TPy4CxvVjBYJ-Ie3OkrfDUop6qDeMvpYS-s" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       rel="stylesheet"
