--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
       crossorigin="anonymous"
     ></script>
     <title>Mohmed Mahmoud Fouad</title>
+    <meta name="description" content="Mern Stack Developer">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
